# reqlang

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  cargo.toml  crates.js  entrypoint.sh  help.html  justfile  search-index.js  settings.html  src-files.js
assert-response/: Cargo.toml
assert_response/: all.html  enum.ResponseDiff.html  fn.assert_response.html  index.html  sidebar-items.js  struct.ResponseDiffs.html
ast/: Cargo.toml  all.html  enum.AstNode.html  index.html  (+3 more)
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: integration_tests.rs
diagnostics/: Cargo.toml  all.html  fn.get_diagnostics.html  index.html  sidebar-items.js  struct.Diagnoser.html  struct.Diagnosis.html  struct.DiagnosisPosition.html  struct.DiagnosisRange.html  struct.DiagnosisSeverity.html
diagnostics/src/: lib.rs
errors/: Cargo.toml  all.html  enum.ParseError.html  enum.ReqlangError.html  enum.ResolverError.html  index.html  sidebar-items.js
errors/src/: lib.rs
export/: Cargo.toml  all.html  enum.Format.html  enum.RequestFormat.html  enum.ResponseFormat.html  fn.export.html  fn.export_response.html  index.html  sidebar-items.js
export/src/: lib.rs
grammar/: Cargo.toml
grammar/src/: lib.rs  reqlang.lalrpop
parser/: Cargo.toml  README.md  all.html  constant.TEMPLATE_REFERENCE_PATTERN.html  fn.parse.html  fn.template.html  index.html  sidebar-items.js
parser/parser/: fn.parse.html
parser/src/: ast.rs  lib.rs  parser.rs  resolver.rs  splitter.rs  templater.rs
parser/templater/: fn.template.html
reqlang/: Cargo.toml  all.html  constant.NO_SPAN.html  enum.Format.html  enum.ReferenceType.html  enum.ReqlangError.html  enum.RequestFormat.html  enum.ResponseFormat.html  fn.export.html  fn.export_response.html  fn.parse.html  fn.template.html  index.html  justfile  package-lock.json  package.json  sidebar-items.js  struct.Ast.html  struct.HttpRequest.html  struct.HttpRequestFetcher.html  struct.HttpResponse.html  struct.HttpStatusCode.html  struct.HttpVerb.html  struct.HttpVersion.html  struct.ParseResult.html  struct.ParsedConfig.html  struct.ParsedRequestFile.html  struct.RequestParamsFromClient.html  struct.TemplatedRequestFile.html  trait.Fetch.html  tsconfig.json  type.Span.html  type.Spanned.html
reqlang-client/: Cargo.toml  LICENSE
reqlang-client/src/: main.rs
reqlang-export/: Cargo.toml
reqlang-export/src/: main.rs
reqlang-fetch/: Cargo.toml  README.md
reqlang-fetch/src/: lib.rs
reqlang-lsp/: Cargo.toml
reqlang-lsp/src/: lib.rs  main.rs
reqlang-web-client/: Cargo.toml  justfile
reqlang-web-client/client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
reqlang-web-client/client/__test__/: App.test.tsx
reqlang-web-client/client/src/: App.css  App.tsx  index.css
reqlang-web-client/client/src/components/: CodeCard.css  CodeCard.tsx  Uploader.css  Uploader.tsx
reqlang-web-client/client/src/stores/: file.ts
reqlang-web-client/src/: error.rs  main.rs
reqlang/assert_response/: enum.ResponseDiff.html  fn.assert_response.html  index.html  sidebar-items.js  struct.ResponseDiffs.html
reqlang/ast/: enum.AstNode.html  index.html  sidebar-items.js  struct.Ast.html
reqlang/diagnostics/: fn.get_diagnostics.html  index.html  sidebar-items.js  struct.Diagnosis.html  struct.DiagnosisPosition.html  struct.DiagnosisRange.html  struct.DiagnosisSeverity.html
reqlang/errors/: enum.FetchError.html  enum.ParseError.html  enum.ReqlangError.html  enum.ResolverError.html  index.html  sidebar-items.js
reqlang/export/: enum.RequestFormat.html  enum.ResponseFormat.html  fn.export.html  fn.export_response.html  index.html
reqlang/extract_codeblocks/: fn.extract_codeblocks.html  index.html  type.SpannedCodeBlock.html  type.SpannedContent.html
reqlang/fetch/: index.html  sidebar-items.js  struct.HttpRequestFetcher.html  trait.Fetch.html
reqlang/http/: index.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.HttpStatusCode.html  struct.HttpVerb.html  struct.HttpVersion.html
reqlang/parser/: constant.TEMPLATE_EXPR_REFERENCE_PATTERN.html  constant.TEMPLATE_REFERENCE_PATTERN.html  constant.TEMPLATE_REFERENCE_PATTERN_INNER.html  fn.parse.html  fn.parse_config.html  fn.parse_expressions.html  fn.parse_inner_references.html  fn.parse_references.html  fn.parse_request.html  fn.parse_response.html  index.html  sidebar-items.js
reqlang/prelude/: index.html
reqlang/span/: constant.NO_SPAN.html  index.html  type.Span.html  type.Spanned.html
reqlang/src/: assert_response.rs  ast.rs  diagnostics.rs  errors.rs  export.rs  extract_codeblocks.rs  fetch.rs  lib.rs  parser.rs  prelude.rs  templater.rs
reqlang/src/types/: bundle.rs  http.rs  mod.rs
reqlang/str_idxpos/: fn.index_to_position.html  fn.position_to_index.html  index.html  sidebar-items.js
reqlang/templater/: fn.template.html  index.html  sidebar-items.js
reqlang/types/: enum.ReferenceType.html  index.html  sidebar-items.js  struct.ParseResult.html  struct.ParsedConfig.html  struct.ParsedConfigPrompt.html  struct.ParsedConfigVariable.html  struct.ParsedRequestFile.html  struct.RequestParamsFromClient.html  struct.TemplatedRequestFile.html
reqlang/types/http/: index.html  sidebar-items.js  struct.HttpRequest.html  struct.HttpResponse.html  struct.HttpStatusCode.html  struct.HttpVerb.html  struct.HttpVersion.html
span/: Cargo.toml  all.html  constant.NO_SPAN.html  index.html  sidebar-items.js  type.Span.html  type.Spanned.html
span/src/: lib.rs
types/: .gitignore  Cargo.toml  all.html  enum.ReferenceType.html  index.html  justfile  package-lock.json  package.json  sidebar-items.js  struct.ParseResult.html  struct.ParsedConfig.html  struct.ParsedRequestFile.html  struct.RequestParamsFromClient.html  struct.TemplatedRequestFile.html  tsconfig.json  types.d.ts
types/http/: index.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.HttpStatusCode.html  struct.HttpVerb.html  struct.HttpVersion.html
types/src/: bundle.rs  http.rs  lib.rs
wasm/: .gitignore  Cargo.toml  justfile
wasm/src/: lib.rs
(+375 files in other folders)
