[workspace]

members = [
    "cli",
    "errors",
    "span",
    "types",
    "parser",
    "reqlang-lsp",
    "diagnostics",
    "export",
    "reqlang-client",
    "str-idxpos",
    "reqlang",
    "integration_tests",
    "reqlang-fetch",
    "assert-response",
    "extract-codeblocks", "ast", "reqlang-web-client",
]

resolver = "2"
