[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
parser = { path = "../parser" }
diagnostics = { path = "../diagnostics" }
errors = { path = "../errors" }
export = { path = "../export" }

[[bin]]
name = "reqlang"
path = "src/main.rs"
