[package]
name = "cli"
description = "Command to work with request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
parser = { path = "../parser" }
diagnostics = { path = "../diagnostics" }
errors = { path = "../errors" }
export = { path = "../export" }
span = { path = "../span" }

[[bin]]
name = "reqlang"
path = "src/main.rs"
