[package]
name = "cli"
description = "Command to work with request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
reqlang = { path = "../reqlang" }
serde = { version = "1" }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = { version = "2" }
pretty_assertions = "1.4.1"


[[bin]]
name = "reqlang"
path = "src/main.rs"
