[package]
name = "diagnostics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
serde = { version = "1.0.195", features = ["derive"] }
errors = { path = "../errors" }
span = { path = "../span" }
parser = { path = "../parser" }
