[package]
name = "diagnostics"
description = "Provide diagnostics from parsing, resolving values in request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
serde = { version = "1.0.195", features = ["derive"] }
errors = { path = "../errors" }
span = { path = "../span" }
parser = { path = "../parser" }
str-idxpos = { path = "../str-idxpos" }
