[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
span = { path = "../span" }
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
