[package]
name = "errors"
description = "Errors types when parsing, resolving, and templating request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
span = { path = "../span" }
thiserror = "2"
serde = { version = "1.0.195", features = ["derive"] }
