[package]
name = "export"
description = "Export request files in to other formats"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
serde = { version = "1.0.195", features = ["derive"] }