[package]
name = "parser"
description = "Parse, resolve, and template request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
span = { path = "../span" }
errors = { path = "../errors" }
httparse = "1.8.0"
toml = "0.8.8"
regex = "1.10.3"
extract-codeblocks = { path = "../extract-codeblocks" }


[dev-dependencies]
pretty_assertions = "1.4.1"
textwrap = "0.16"
