[package]
name = "reqlang-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
ehttp = { version = "0.4.0", features = ["streaming"] }
poll-promise = { version = "0.3", default-features = false }
rfd = "0.13.0"
reqlang = { path = "../reqlang" }
