[package]
name = "reqlang-export"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
parser = { path = "../parser" }
diagnostics = { path = "../diagnostics" }
export = { path = "../export" }
