[package]
name = "reqlang-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
parser = { path = "../parser" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.17.0", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
