[package]
name = "reqlang-lsp"
description = "Language server for reqlang"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = { version = "0.19.0" }
anyhow = "1.0.52"
tokio = { version = "1.17.0", features = ["full"] }
reqlang = { path = "../reqlang" }
serde = { version = "1" }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
