[package]
name = "reqlang-web-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-serve-static = "0.1.1"
include_dir = "0.7.0"
