[package]
name = "span"
description = "Span type used when parsing request files and reporting diagnostics"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
