[package]
name = "types"
description = "Shared types to work with request files"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
span = { path = "../span" }
ts-rs = "10.0"

[dev-dependencies]
rstest = "0.19.0"

[[bin]]
name = "bundle_types"
path = "src/bundle.rs"
required-features = ["bundle_types"]

[features]
bundle_types = []
