[package]
name = "reqlang-wasm"
description = "Web assembly build of reqlang"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
parser = { path = "../parser" }
types = { path = "../types" }
export = { path = "../export" }
diagnostics = { path = "../diagnostics" }

[lib]
crate-type = ["cdylib"]
